# ELT-Bench

./: README.md  agent.py  create_snowflake_db.py  dataset.py  eltbench.py  model.py
agents/SWE-agent/: README.md  create_snowflake_db.py  (+1 more)
agents/augment-swebench-agent/: .pre-commit-config.yaml  LICENSE  README.md  cli.py  create_snowflake_db.py  example_ensembler_data.jsonl  example_ensembler_results.json  extract_cost.py  majority_vote_ensembler.py  merge_shards.py  pre-ensemble_results_shard0_of_1.jsonl  pyproject.toml  pyrightconfig.ci.json  requirements.txt  run.sh  run_agent_on_eltbench.py  run_agent_on_swebench_problem.py  setup.sh  swebench_patch.diff
agents/augment-swebench-agent/prompts/: ensembler_prompt.py  instruction.py  system_prompt.py
agents/augment-swebench-agent/tools/: __init__.py  agent.py  bash_tool.py  complete_tool.py  sequential_thinking_tool.py  str_replace_tool.py  test_bash_tool.py  test_sequential_thinking_tool.py  test_str_replace_tool.py
agents/augment-swebench-agent/utils/: common.py  docker_utils.py  llm_client.py  swebench_eval_utils.py  test_indent_utils.py  token_counter.py  workspace_manager.py
docker/: Dockerfile  compose.yaml
documentation/: airbyte_Provider.md  source_s3.md  trigger_job.md
elt-docker/: docker-compose.yml
evaluation/: eva.py  eva_stage1.py  eva_stage2.py  table.json
example/: README.md  create_snowflake_db.py  install.sh  set_elt.sh  trigger_sync.py  write_gt.py
setup/: check_job_status.py  data_setup.sh  elt_bench.yaml  elt_setup.sh  main.tf  mongo.jsonl  mongo.py  requirements.txt  write_config.py
(+1506 files in other folders)
